fix(*): Fixes an Issue on mobile where it was possible to scroll to the side and messing the site up

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    max-width: 100vw;
+    overflow: hidden;
     section {
         width: 100%;
     }
